All frameworks redirected

--- a/au/index.html
+++ b/au/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aurelia</title>
-</head>
-<body>
-    <h1>Aurelia</h1>
-</body>
-</html>
+<!doctype html><html><head><meta charset="utf-8"><title>Aurelia</title><meta name="viewport" content="width=device-width,initial-scale=1"><base href="/"><base href="/au/"><script defer="defer" src="/au/entry.f0fbd4b730e495809854.bundle.js"></script></head><body><my-app></my-app></body></html>
