--- a/vue/index.html
+++ b/vue/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vue</title>
-</head>
-<body>
-    <h1>Vue</h1>
-</body>
-</html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/vue/favicon.ico"><title>kms-client-vue</title><link href="/vue/js/about.4821e937.js" rel="prefetch"><link href="/vue/css/app.9ffc045f.css" rel="preload" as="style"><link href="/vue/css/chunk-vendors.e64948fc.css" rel="preload" as="style"><link href="/vue/js/app.36536503.js" rel="preload" as="script"><link href="/vue/js/chunk-vendors.c1f858e5.js" rel="preload" as="script"><link href="/vue/css/chunk-vendors.e64948fc.css" rel="stylesheet"><link href="/vue/css/app.9ffc045f.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but kms-client-vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/vue/js/chunk-vendors.c1f858e5.js"></script><script src="/vue/js/app.36536503.js"></script></body></html>
